--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Mapping Graffiti in Chicago</title>
+  
   <script type="text/javascript" src="./d3/d3.min.js"></script>
+  
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
 
   <link rel="stylesheet" type="text/css" href="styles.css"/>
 
