--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       #map{ height: 100% }
     </style>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
-<title>Hex Bins + leaflet</title>
+<title>Mapping Graffiti in Chicago</title>
  
 <div id="map"></div>
 <script src="http://d3js.org/d3.v3.min.js"></script>
