--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
       body { height: 100%; margin: 0; padding: 0;}
       #map{ height: 100% }
     </style>
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+<link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
 <title>Mapping Graffiti in Chicago</title>
  
 <div id="map"></div>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="colorbrewer.js"></script>
 <script src="hexbin.js"></script>
-<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
+<script src="https://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
 <script>
 var m = L.map("map").setView([41.838299, -87.706953],11);
 var buckets = 11;
