hexbin map for 5 years with slider done. Link two maps by navigation bar. Reorganize repo

--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
 
 </head>
 <body>
+  <div class="topnav" id="myTopnav">
+    <a class="active" href="#">Bivariate Map </a>
+    <a href="hexbin.html">Hexbin Map</a>
+  </div>
 
   <div id="sliderContainer">
     <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/><br>
     <span id="range">2012</span>
   </div>
 
-	<div id="map" height=180 width=180></div>
+	<div id="map"></div>
 
 
 
