add community name & link to main map

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div id="map"></div>
     <h2>Line Charts</h2>
     <div id="comparison">
+      <div id="info"></div>
       <div id="frequency"></div>
       <div id="time"></div>
     </div>
