--- a/index.html
+++ b/index.html
@@ -13,24 +13,33 @@
 
 </head>
 <body>
-  <div class="topnav" id="myTopnav">
-    <a class="active" href="#">Bivariate Map </a>
-    <a href="hexbin.html">Hexbin Map</a>
-  </div>
 
-  <div id="sliderContainer">
-    <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/><br>
-    <span id="range">2012</span>
-  </div>
 
   <div class="container">
-    <div id="map"></div>
-    <h2>Line Charts</h2>
-    <div id="comparison">
-      <div id="info"></div>
-      <div id="frequency"></div>
-      <div id="time"></div>
+    <div class="topnav" id="myTopnav">
+      <ul id="nav">
+        <h1>Mapping Graffiti in Chicago</h1>
+        <li><a class="active" href="#">Bivariate Map </a></li> 
+        <li><a href="hexbin.html">Hexbin Map</a></li>     
     </div>
+
+    <div id="graphs"; position:relative; width = "100%"; height = "800px">
+
+      <div id="sliderContainer">
+        <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/><br>
+        <span id="range">2012</span>
+      </div>
+      <div id="map"></div>
+
+      <div id="comparison">
+        <div id="info"></div>
+        <h3>Average Requests per 10,000 Population</h2>
+        <div id="frequency"></div>
+        <h3>Average Response Time</h2>
+        <div id="response"></div>
+      </div>
+    </div>
+
   </div>
 
   <script type="text/javascript" src="script.js"></script>
