--- a/index.html
+++ b/index.html
@@ -42,19 +42,27 @@
       <div class="row">
         <div class="col-md-6">
           <div id="sliderContainer">
-            <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/><br>
             <span id="range">2012</span>
+            <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/><br>
+            
           </div>
           <div id="map"></div>
         </div>
         <div class="col-md-6">
           <div id="info"></div>
+          <div id="legend" height="300">Legend Placeholder</div>
+          <div class="row">
+            <div class="col-md-6">
+              <h5>Average Requests<br>per 10,000 Population</h5>
+            </div>
+            <div class="col-md-6">
+              <h5>Average Response Time</h5>
+            </div>
+          </div>
           <div class="row">
             <div class="col-md-6" id="frequency"></div>
             <div class="col-md-6" id="response"></div>            
           </div>
-          <p>Average Requests per 10,000 Population</p>
-          <p>Average Response Time</p>
         </div>
       </div>
     </div>    
