--- a/index.html
+++ b/index.html
@@ -43,14 +43,13 @@
         <div class="col-md-6">
           <div id="sliderContainer">
             <span id="range">2012</span>
-            <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/><br>
-            
+            <input class="slider" id="timeslide" type="range" min="0" max="4" value="0" step="1"/><br>            
           </div>
           <div id="map"></div>
         </div>
         <div class="col-md-6">
           <div id="info"></div>
-          <div id="legend" height="300">Legend Placeholder</div>
+          <div id="legend" height="300"></div>
           <div class="row">
             <div class="col-md-6">
               <h5>Average Requests<br>per 10,000 Population</h5>
@@ -69,6 +68,7 @@
     
     <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="comparison.js"></script>
+    <script type="text/javascript" src="legend.js"></script>
 
   </body>
 </html>
