--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           </div>
         </div>
       </div>
+      <p style="float:left">Data Source: <a href="https://data.cityofchicago.org/Service-Requests/311-Service-Requests-Graffiti-Removal/hec5-y4x5"> 311 Service Requests - Graffiti Removal</a></p>
     </div>    
     
     <script type="text/javascript" src="script.js"></script>
